# cute_snake

./: .gitignore  Justfile  README.md  pyproject.toml
artifacts/impl4_round_search/: rounds.jsonl
configs/: base.yaml  implementation2.yaml  implementation3.yaml  implementation4.yaml  optuna_implementation4.yaml  sweep_implementation4_round1.yaml  sweep_implementation4_round2.yaml  sweep_implementation4_round3.yaml  sweep_search_current.yaml  sweep_static_tick_r01.yaml  sweep_static_tick_r02.yaml  sweep_static_tick_r03.yaml  sweep_static_tick_r04.yaml  sweep_static_tick_r05.yaml  sweep_static_tick_r06.yaml  sweep_static_tick_r07.yaml  sweep_static_tick_r08.yaml  sweep_static_tick_r09.yaml  sweep_static_tick_r10.yaml  sweep_static_tick_round1.yaml  sweep_static_tick_round2.yaml  sweep_static_tick_round3.yaml  sweep_static_tick_round4.yaml  sweep_static_tick_round5.yaml  sweep_static_tick_round6.yaml  sweep_wallclock.yaml
docs/: implementations.md  performance_findings_01.md  performance_findings_02.md  results_2026_03_22_dg_followup_sweep.md  snake_rl_spec.md  summary.md
optuna/: implementation4.db  implementation4_20260323_001140.db  implementation4_20260323_001500_narrow.db  implementation4_20260323_001930_parallelfix.db  implementation4_20260323_003300_seedoffset.db  parallel_smoke.db  smoke.db  smoke_override.db
scripts/: bench_env.py  cute_fused_experiment.py  cute_smoke.py  eval.py  launch_sweep.py  search_impl4_rounds.py  summarize_sweep.py  sweep.py  sweep_optuna.py  train.py  visualize.py
tests/: test_config.py  test_cute_smoke.py  test_env_semantics.py  test_gpu_matches_reference.py  test_model.py  test_run_dirs.py
(+15 files in other folders)
